--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.sass">
-  <title>Horror Personality</title>
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="style.css">
+  <title>Horror Personality Quiz</title>
 </head>
 <body>
   <main>
-    <div class="backgroundImage"></div>
-    <!-- buttons -->
+
+    <section class="section fade-in">
+        <div class="centered-box fade-in">
+          <!--question text-->
+          <h1>HORROR PERSONALITY QUIZ</h1>
+          <img src="images/test2.jpg" alt="Home Image">
+          <!--buttons-->
+          <a href="https://chiuya.github.io/homeboundBug/" class="option1" target="_self">START</a>
+          <a href="https://chiuya.github.io/homeboundBug/" class="option2" target="_self">SHARE</a>
+        </div>
+    </section>
+
   </main>
   <script src="index.js"></script>
 </body>
