--- a/question pages/question1.html
+++ b/question pages/question1.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <title>Horror Personality Quiz</title>
 </head>
 <body>
@@ -13,15 +12,15 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <!--question text-->
-          <h1>HORROR PERSONALITY QUIZ</h1>
-          <img src="images/test2.jpg" alt="Home Image">
+          <h1>Question 1</h1>
+          <img src="../images/test.png" alt="Home Image">
           <!--buttons-->
-          <a href="question pages/question1.html" class="option1" target="_self">START</a>
+          <a href="../result pages/entp.html" class="option1" target="_self">What do</a>
           <a href="https://chiuya.github.io/homeboundBug/" class="option2" target="_self">SHARE</a>
         </div>
     </section>
 
   </main>
-  <script src="index.js"></script>
+  <script src="../index.js"></script>
 </body>
 </html>
