--- a/question pages/question1.html
+++ b/question pages/question1.html
@@ -16,7 +16,7 @@
           <img src="../images/test.png" alt="Home Image">
           <!--buttons-->
           <a href="../result pages/entp.html" class="option1" target="_self">What do</a>
-          <a href="https://chiuya.github.io/homeboundBug/" class="option2" target="_self">SHARE</a>
+          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE</a>
         </div>
     </section>
 
