added share button to results

--- a/result pages/entp.html
+++ b/result pages/entp.html
@@ -13,6 +13,7 @@
         <div class="centered-box fade-in">
           <h1>ENTP</h1>
           <img src="../images/test.png" alt="Home Image">
+          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE RESULTS</a>
         </div>
     </section>
 
