more project site links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img src="images/test2.jpg" alt="Home Image">
           <!--buttons-->
           <a href="question pages/question1.html" class="option1" target="_self">START</a>
-          <a href="https://chiuya.github.io/homeboundBug/" class="option2" target="_self">SHARE</a>
+          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE</a>
         </div>
     </section>
 
