--- a/question pages/question1.html
+++ b/question pages/question1.html
@@ -15,8 +15,10 @@
           <h1>Question 1</h1>
           <img src="../images/test.png" alt="Home Image">
           <!--buttons-->
-          <a href="../result pages/entp.html" class="option1" target="_self">What do</a>
-          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE</a>
+          <a href="../result pages/entp.html" class="option1" target="_self">
+            What do</a>
+          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">
+            Do this</a>
         </div>
     </section>
 
