--- a/question pages/question2.html
+++ b/question pages/question2.html
@@ -11,9 +11,14 @@
 
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <h1>ENTP</h1>
-          <img src="../images/test.png" alt="Result Image">
-          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE RESULTS</a>
+          <!--question text-->
+          <h1>Question 1</h1>
+          <img src="../images/test.png" alt="Home Image">
+          <!--buttons-->
+          <a href="../result pages/entp.html" class="option1" target="_self">
+            What do</a>
+          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">
+            Do this</a>
         </div>
     </section>
 
