setting up page linkage
index -> questions -> click for results -> results draft setup

--- a/question pages/question12.html
+++ b/question pages/question12.html
@@ -12,13 +12,13 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <!--question text-->
-          <h1>What does your domain look like?</h1>
+          <h1>Huge</h1>
           <img src="../images/test.png" alt="Home Image">
           <!--buttons-->
-          <a id= "ei-incr" href="question12.html" class="option1" target="_self">
-            A shroud of darkness envelops the trees</a>
-          <a id= "ei-dec" href="question12.html" class="option2" target="_self">
-            Beams of moonlight illuminate the grounds</a>
+          <a id= "ei-incr" href="click for results.html" class="option1" target="_self">
+            Beep boop</a>
+          <a id= "ei-dec" href="click for results.html" class="option2" target="_self">
+            Suck my dick and balls</a>
         </div>
     </section>
 
