--- a/result pages/infp.html
+++ b/result pages/infp.html
@@ -11,14 +11,9 @@
 
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <!--question text-->
-          <h1>Question 1</h1>
-          <img src="../images/test.png" alt="Home Image">
-          <!--buttons-->
-          <a href="../result pages/entp.html" class="option1" target="_self">
-            What do</a>
-          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">
-            Do this</a>
+          <h1>INFP</h1>
+          <img src="../images/test.png" alt="Result Image">
+          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE RESULTS</a>
         </div>
     </section>
 
