--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <h1>HORROR PERSONALITY QUIZ</h1>
           <img src="images/test2.jpg" alt="Home Image">
           <!--buttons-->
-          <a href="question pages/question1.html" class="option1" target="_self">START</a>
-          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE</a>
+          <a href="question pages/question1.html" class="top-button" target="_self">START</a>
+          <a href="https://chiuya.github.io/projectsSite/" class="bottom-button" target="_self">SHARE</a>
         </div>
     </section>
 
