--- a/question pages/click for results.html
+++ b/question pages/click for results.html
@@ -12,17 +12,17 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <!--question text-->
-          <h1>Question 1</h1>
+          <h1>Your results...? Test</h1>
           <img src="../images/test.png" alt="Home Image">
           <!--buttons-->
-          <a href="../result pages/entp.html" class="option1" target="_self">
-            What do</a>
-          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">
-            Do this</a>
+          <a href="../result pages/enfp.html" class="option1" target="_self">
+            Click here!</a>
+            <!-- button calls function to find path.html-->
         </div>
     </section>
 
   </main>
   <script src="../index.js"></script>
+  <script src="../js/question.js"></script>
 </body>
 </html>
