--- a/result pages/enfp.html
+++ b/result pages/enfp.html
@@ -11,7 +11,7 @@
 
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <h1>ENTP</h1>
+          <h1>ENFP</h1>
           <img src="../images/test.png" alt="Result Image">
           <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE RESULTS</a>
         </div>
