dynamic results setup
using sessionStorage to store mbti values

--- a/question pages/click for results.html
+++ b/question pages/click for results.html
@@ -15,7 +15,7 @@
           <h1>Your results...? Test</h1>
           <img src="../images/test.png" alt="Home Image">
           <!--buttons-->
-          <a href="../result pages/enfp.html" class="option1" target="_self">
+          <a id="results-button" class="option1" target="_self">
             Click here!</a>
             <!-- button calls function to find path.html-->
         </div>
