updated button positionings
new class button-container

--- a/question pages/click for results.html
+++ b/question pages/click for results.html
@@ -14,10 +14,11 @@
           <!--question text-->
           <h1>Your results...? Test</h1>
           <img src="../images/test.png" alt="Home Image">
-          <!--buttons-->
-          <a id="results-button" class="option1" target="_self">
-            Click here!</a>
-            <!-- button calls function to find path.html-->
+          <div class="button-container">
+            <a id="results-button" class="option1" target="_self">
+              Click here!</a>
+              <!-- button calls function to find path.html-->
+          </div>
         </div>
     </section>
 
