--- a/question pages/question12.html
+++ b/question pages/question12.html
@@ -14,11 +14,13 @@
           <!--question text-->
           <h1>Huge</h1>
           <img src="../images/test.png" alt="Home Image">
-          <!--buttons-->
-          <a id= "ei-incr" href="click for results.html" class="option1" target="_self">
-            Beep boop</a>
-          <a id= "ei-dec" href="click for results.html" class="option2" target="_self">
-            Suck my dick and balls</a>
+          <div class="button-container">
+            <!--buttons-->
+            <a id= "ei-incr" href="click for results.html" class="option1" target="_self">
+              Beep boop</a>
+            <a id= "ei-dec" href="click for results.html" class="option2" target="_self">
+              Suck my dick and balls</a>
+          </div>
         </div>
     </section>
 
