--- a/question pages/question5.html
+++ b/question pages/question5.html
@@ -11,16 +11,21 @@
 
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <h1>INFP</h1>
-          <img src="../images/test.png" alt="Result Image">
+          <!--question text-->
+          <h1>What does your domain look like?</h1>
+          <img src="../images/test.png" alt="Home Image">
           <div class="button-container">
-            <a href="https://chiuya.github.io/projectsSite/" 
-            target="_self">SHARE RESULTS</a>
+            <!--buttons-->
+            <a id= "ei-incr" href="question6.html" class="option1" target="_self">
+              A shroud of darkness envelops the trees</a>
+            <a id= "ei-dec" href="question6.html" class="option2" target="_self">
+              Beams of moonlight illuminate the grounds</a>
           </div>
         </div>
     </section>
 
   </main>
   <script src="../index.js"></script>
+  <script src="../js/question.js"></script>
 </body>
 </html>
