--- a/result pages/enfp.html
+++ b/result pages/enfp.html
@@ -13,7 +13,10 @@
         <div class="centered-box fade-in">
           <h1>ENFP</h1>
           <img src="../images/test.png" alt="Result Image">
-          <a href="https://chiuya.github.io/projectsSite/" class="option2" target="_self">SHARE RESULTS</a>
+          <div class="button-container">
+            <a href="https://chiuya.github.io/projectsSite/" 
+            target="_self">SHARE RESULTS</a>
+          </div>
         </div>
     </section>
 
