--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
           <!--question text-->
           <h1>HORROR PERSONALITY QUIZ</h1>
           <img src="images/test2.jpg" alt="Home Image">
-          <!--buttons-->
-          <a href="question pages/question1.html" class="top-button" target="_self">START</a>
-          <a href="https://chiuya.github.io/projectsSite/" class="bottom-button" target="_self">SHARE</a>
+          <div class="button-container">
+            <!--buttons-->
+            <a href="question pages/question1.html" target="_self">START</a>
+            <a href="https://chiuya.github.io/projectsSite/" target="_self">SHARE</a>
+          </div>
         </div>
     </section>
 
