--- a/question pages/question1.html
+++ b/question pages/question1.html
@@ -14,11 +14,13 @@
           <!--question text-->
           <h1>What does your domain look like?</h1>
           <img src="../images/test.png" alt="Home Image">
-          <!--buttons-->
-          <a id= "ei-incr" href="question12.html" class="option1" target="_self">
-            A shroud of darkness envelops the trees</a>
-          <a id= "ei-dec" href="question12.html" class="option2" target="_self">
-            Beams of moonlight illuminate the grounds</a>
+          <div class="button-container">
+            <!--buttons-->
+            <a id= "ei-incr" href="question2.html" target="_self">
+              A shroud of darkness envelops the trees</a>
+            <a id= "ei-dec" href="question2.html" target="_self">
+              Beams of moonlight illuminate the grounds</a>
+          </div>
         </div>
     </section>
 
