bar, begin anim
added progress bar, started sprite animation class, added test sprite sheet

--- a/question pages/question7.html
+++ b/question pages/question7.html
@@ -14,6 +14,9 @@
           <!--question text-->
           <h1>What does your domain look like?</h1>
           <img src="../images/test.png" alt="Home Image">
+          <div class="progress-bar-container">
+            <div class="progress-bar" style="width: 58.33%;"></div>
+          </div>
           <div class="button-container">
             <!--buttons-->
             <a id= "ei-incr" href="question8.html" class="option1" target="_self">
