--- a/question pages/question1.html
+++ b/question pages/question1.html
@@ -14,6 +14,9 @@
           <!--question text-->
           <h1>What does your domain look like?</h1>
           <img src="../images/test.png" alt="Home Image">
+          <div class="progress-bar-container">
+            <div class="progress-bar" style="width: 8.33%;"></div>
+          </div>
           <div class="button-container">
             <!--buttons-->
             <a id= "ei-incr" href="question2.html" target="_self">
