--- a/question pages/question12.html
+++ b/question pages/question12.html
@@ -14,6 +14,9 @@
           <!--question text-->
           <h1>Huge</h1>
           <img src="../images/test.png" alt="Home Image">
+          <div class="progress-bar-container">
+            <div class="progress-bar" style="width: 100%;"></div>
+          </div>
           <div class="button-container">
             <!--buttons-->
             <a id= "ei-incr" href="click for results.html" class="option1" target="_self">
