--- a/question pages/question6.html
+++ b/question pages/question6.html
@@ -14,6 +14,9 @@
           <!--question text-->
           <h1>6?</h1>
           <img src="../images/test.png" alt="Home Image">
+          <div class="progress-bar-container">
+            <div class="progress-bar" style="width: 50%;"></div>
+          </div>
           <div class="button-container">
             <!--buttons-->
             <a id= "ei-incr" href="question7.html" class="option1" target="_self">
