--- a/question pages/click for results.html
+++ b/question pages/click for results.html
@@ -24,6 +24,6 @@
 
   </main>
   <script src="../index.js"></script>
-  <script src="../js/question.js"></script>
+  <script src="../js/results.js"></script>
 </body>
 </html>
