--- a/question pages/questions.html
+++ b/question pages/questions.html
@@ -12,17 +12,16 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <!--question text-->
-          <h1>11?</h1>
-          <img src="../images/test.png" alt="Home Image">
+          <h1 id="question">Test Question?</h1>
+          <img id="image" src="../images/test.png" alt="Image">
           <div class="progress-bar-container">
-            <div class="progress-bar" style="width: 91.67%;"></div>
-          </div>
+            <div id="progress" class="progress-bar"></div></div>
           <div class="button-container">
             <!--buttons-->
-            <a id= "ei-incr" href="question12.html" class="option1" target="_self">
-              A shroud of darkness envelops the trees</a>
-            <a id= "ei-dec" href="question12.html" class="option2" target="_self">
-              Beams of moonlight illuminate the grounds</a>
+            <a id= "answer1" href="click for results.html" target="_self">
+              Test 1</a>
+            <a id= "answer2" href="click for results.html" target="_self">
+              Test 2</a>
           </div>
         </div>
     </section>
@@ -30,5 +29,6 @@
   </main>
   <script src="../index.js"></script>
   <script src="../js/question.js"></script>
+  <script src="../js/results.js"></script>
 </body>
 </html>
