more work on question.js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img src="images/test2.jpg" alt="Home Image">
           <div class="button-container">
             <!--buttons-->
-            <a href="question pages/questions.html" target="_self">START</a>
+            <a class="start" href="question pages/questions.html" target="_self">START</a>
             <a href="https://chiuya.github.io/projectsSite/" target="_self">SHARE</a>
           </div>
         </div>
