hooked up questions js
no fork set-up yet but questions and corresponding results pages work. all temporary pics

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <img src="images/test2.jpg" alt="Home Image">
           <div class="button-container">
             <!--buttons-->
-            <a class="start" href="question pages/questions.html" target="_self">START</a>
-            <a href="https://chiuya.github.io/projectsSite/" target="_self">SHARE</a>
+            <button onclick = "start()">START</button>
+            <button onclick = "shareQuiz()">SHARE</button>
           </div>
         </div>
     </section>
