--- a/question pages/click for results.html
+++ b/question pages/click for results.html
@@ -15,8 +15,8 @@
           <h1>Your results...? Test</h1>
           <img src="../images/test.png" alt="Home Image">
           <div class="button-container">
-            <a id="results-button" class="option1" target="_self">
-              Click here!</a>
+            <button onclick="loadResultPath()" id="results-button">
+              Click here!</button>
               <!-- button calls function to find path.html-->
           </div>
         </div>
