--- a/result pages/error.html
+++ b/result pages/error.html
@@ -11,11 +11,8 @@
 
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <h1>ENFP</h1>
+          <h1>ERROR PAGE</h1>
           <img src="../images/test.png" alt="Result Image">
-          <div class="button-container">
-            <button onclick="shareResults()">SHARE RESULTS</button>
-          </div>
         </div>
     </section>
 
