--- a/result pages/infp.html
+++ b/result pages/infp.html
@@ -14,8 +14,7 @@
           <h1>INFP</h1>
           <img src="../images/test.png" alt="Result Image">
           <div class="button-container">
-            <a href="https://chiuya.github.io/projectsSite/" 
-            target="_self">SHARE RESULTS</a>
+            <button onclick="shareResults()">SHARE RESULTS</button>
           </div>
         </div>
     </section>
