changed results to just one page
more reliant on js than separate html pages

--- a/pages/click for results.html
+++ b/pages/click for results.html
@@ -8,16 +8,12 @@
 </head>
 <body>
   <main>
-
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <!--question text-->
           <h1>Your results...? Test</h1>
           <img src="../images/test.png" alt="Home Image">
           <div class="button-container">
-            <button onclick="loadResultPath()" id="results-button">
-              Click here!</button>
-              <!-- button calls function to find path.html-->
+            <button onclick="getResults()">Click here!</button>
           </div>
         </div>
     </section>
