--- a/pages/error.html
+++ b/pages/error.html
@@ -8,17 +8,12 @@
 </head>
 <body>
   <main>
-
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <h1>ENFP</h1>
+          <h1>ERROR PAGE</h1>
           <img src="../images/test.png" alt="Result Image">
-          <div class="button-container">
-            <button onclick="shareResults()">SHARE RESULTS</button>
-          </div>
         </div>
     </section>
-
   </main>
   <script src="../index.js"></script>
 </body>
