progress bar animated sprite and fork

--- a/pages/click for results.html
+++ b/pages/click for results.html
@@ -11,7 +11,7 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <h1>Your results...? Test</h1>
-          <img src="../images/test.png" alt="Home Image">
+          <img src="../images/phoneTest.png" alt="Home Image">
           <div class="button-container">
             <button onclick="getResults()">Click here!</button>
           </div>
