--- a/pages/error.html
+++ b/pages/error.html
@@ -11,7 +11,7 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <h1>ERROR PAGE</h1>
-          <img src="../images/test.png" alt="Result Image">
+          <img src="../images/phoneTest.png" alt="Result Image">
         </div>
     </section>
   </main>
