--- a/pages/questions.html
+++ b/pages/questions.html
@@ -12,9 +12,10 @@
         <div class="centered-box fade-in">
           <!--question text-->
           <h1 id="question">Test Question?</h1>
-          <img id="image" src="../images/test.png" alt="Image">
-          <div class="progress-bar-container">
+          <img id="image" src="../images/phoneTest.png" alt="Image">
+          <div id="progress container" class="progress-bar-container">
             <div id="progress" class="progress-bar"></div></div>
+          <div id="progress sprite" class="progress-sprite"></div>
           <div class="button-container">
             <!--buttons-->
             <button onclick="answer1Handler()" id= "answer1">Test 1</button>
