--- a/pages/results.html
+++ b/pages/results.html
@@ -11,7 +11,7 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <h1>RESULTS</h1> <!--TODO: delete this later-->
-          <img id="result image" src="../images/test.png" alt="Result Image">
+          <img id="result image" src="../images/phoneTest.png" alt="Result Image">
           <div class="button-container">
             <button onclick="shareResults()">SHARE RESULTS</button>
             <button onclick="restartQuiz()">RESTART QUIZ</button>
