added foreground guy code
more changes might have to be made once the actual guy is in the files

--- a/pages/results.html
+++ b/pages/results.html
@@ -12,8 +12,8 @@
         <div class="centered-box fade-in">
           <h1>RESULTS</h1> <!--TODO: delete this later-->
           <img id="result image" src="../images/phoneTest.png" alt="Result Image">
-          <div class="button-container">
-            <button onclick="shareResults()">SHARE RESULTS</button>
+          <div class="button-container" style="height: 20%">
+            <!-- <button onclick="shareResults()">SHARE QUIZ</button> -->
             <button onclick="restartQuiz()">RESTART QUIZ</button>
           </div>
         </div>
