--- a/pages/questions.html
+++ b/pages/questions.html
@@ -16,6 +16,7 @@
           <div id="progress container" class="progress-bar-container">
             <div id="progress" class="progress-bar"></div></div>
           <div id="progress sprite" class="progress-sprite"></div>
+          <div id="foreground sprite" class="foreground-sprite"></div>
           <div class="button-container">
             <!--buttons-->
             <button onclick="answer1Handler()" id= "answer1">Test 1</button>
