added snackbar for share button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button onclick = "start()">START</button>
             <button onclick = "shareQuiz()">SHARE</button>
           </div>
+          <div id="snackbar">Copied link to clipboard</div>
         </div>
     </section>
 
