update index.html img src

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="centered-box fade-in">
           <!--question text-->
           <h1>HORROR PERSONALITY QUIZ</h1>
-          <img src="images/phoneTest.png" alt="Home Image">
+          <img src="images/forest/0.png" alt="Home Image">
           <div class="button-container">
             <button onclick = "start()">START</button>
             <button onclick = "shareQuiz()">SHARE</button>
