--- a/pages/questions.html
+++ b/pages/questions.html
@@ -12,7 +12,7 @@
         <div class="centered-box fade-in">
           <!--question text-->
           <h1 id="question">Test Question?</h1>
-          <img id="image" src="../images/phoneTest.png" alt="Image">
+          <img id="image" src="../images/forest/0.png" alt="Image">
           <div id="progress container" class="progress-bar-container">
             <div id="progress" class="progress-bar"></div></div>
           <div id="progress sprite" class="progress-sprite"></div>
