code for foreground sprite and mirror result transition
also added temporary spritesheets for questions

--- a/pages/click for results.html
+++ b/pages/click for results.html
@@ -10,11 +10,15 @@
   <main>
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <h1>Your results...? Test</h1>
-          <img id="image" src="../images/forest/mirror.png" alt="Home Image">
+          <h1 id="header">In the reflection...</h1>
+          <img id="image" src="../images/forest/mirror.png" alt="Background Image">
           <div class="button-container">
-            <button onclick="loadMirrorCloseup()">See Your Reflection...</button>
+            <button id="result button" onclick="loadMirrorCloseup()">
+              Is that me...?</button>
+              <button id="go to result button" onclick="goResults()">
+                I'm...</button>
           </div>
+          <div id="mon image" class="mon-image"></div>
         </div>
     </section>
 
