fade-in transition for reflection
made it its own page so fade-in class can do its thang. also made error page lead back to home

--- a/pages/click for results.html
+++ b/pages/click for results.html
@@ -13,12 +13,9 @@
           <h1 id="header">In the reflection...</h1>
           <img id="image" src="../images/forest/mirror.png" alt="Background Image">
           <div class="button-container">
-            <button id="result button" onclick="loadMirrorCloseup()">
+            <button id="result button" onclick="goReflection()">
               Is that me...?</button>
-              <button id="go to result button" onclick="goResults()">
-                I'm...</button>
           </div>
-          <div id="mon image" class="mon-image"></div>
         </div>
     </section>
 
