--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -6,19 +6,22 @@
   <link rel="stylesheet" href="../style.css">
   <title>Horror Personality Quiz</title>
 </head>
-<body>
+<body onload="loadMirrorCloseup()">
   <main>
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <h1>ERROR PAGE</h1>
-          <img src="../images/forest/mirror.png" alt="Result Image">
+          <img id="image" src="../images/forest/closeup.png" alt="Background Image">
           <div class="button-container">
-            <button onclick="restartQuiz()">RESTART QUIZ</button>
+              <button id="go to result button" onclick="goResults()">
+                I'm...</button>
           </div>
+          <div id="mon image" class="mon-image"></div>
         </div>
     </section>
+
   </main>
   <script src="../index.js"></script>
+  <script src="../js/question.js"></script>
   <script src="../js/results.js"></script>
 </body>
 </html>
