--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -11,7 +11,7 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <img id="image" src="../images/forest/closeup.png" alt="Background Image">
-          <div class="button-container">
+          <div class="button-container" style="height: 20%">
               <button id="go to result button" onclick="goResults()">
                 I'm...</button>
           </div>
