added temp questions, fixed size/spacings

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <!--question text-->
-          <h1>HORROR PERSONALITY QUIZ</h1>
+          <h1 style="margin:2%; top: 25%;">HORROR PERSONALITY QUIZ</h1>
           <img src="images/forest/0.png" alt="Home Image">
           <div class="button-container">
             <button onclick = "start()">START</button>
