temporary results hooked up
all results in place, all routes/paths in place.

--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -15,7 +15,7 @@
               <button id="go to result button" onclick="goResults()">
                 I'm...</button>
           </div>
-          <div id="mon image" class="mon-image"></div>
+          <!--<div id="mon image" class="mon-image"></div>-->
         </div>
     </section>
 
