--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -10,12 +10,11 @@
   <main>
     <section class="section fade-in">
         <div class="centered-box fade-in">
-          <img id="image" src="../images/forest/closeup.png" alt="Background Image">
+          <img id="image" src="../images/forest/0.png" alt="Image">
           <div class="button-container" style="height: 20%">
               <button id="go to result button" onclick="goResults()">
                 I'm...</button>
           </div>
-          <!--<div id="mon image" class="mon-image"></div>-->
         </div>
     </section>
 
