continued bug fixing
content fitting issue in centered-box i guess?

--- a/pages/click for results.html
+++ b/pages/click for results.html
@@ -8,9 +8,9 @@
 </head>
 <body onload="loadMirror()">
   <main>
-    <section class="section fade-in">
+    <section class="section">
         <div class="centered-box fade-in">
-          <h1 id="header">In the reflection...</h1>
+          <!--<h1 id="header">In the reflection...</h1>-->
           <img id="image" src="../images/forest/mirror.png" alt="Background Image">
           <div class="button-container">
             <button id="result button" onclick="goReflection()">
