--- a/pages/error.html
+++ b/pages/error.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main>
-    <section class="section fade-in">
+    <section class="section">
         <div class="centered-box fade-in">
           <h1>ERROR PAGE</h1>
           <img src="../images/forest/mirror.png" alt="Result Image">
