--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="loadMirrorCloseup()">
   <main>
-    <section class="section fade-in">
+    <section class="section">
         <div class="centered-box fade-in">
           <img id="image" src="../images/forest/0.png" alt="Image">
           <div class="button-container" style="height: 20%">
