--- a/pages/results.html
+++ b/pages/results.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="loadResults()">
   <main>
-    <section class="section fade-in">
+    <section class="section">
         <div class="centered-box fade-in">
           <img id="result image" src="../images/forest/0.png" alt="Result Image">
           <div class="button-container" style="height: 15%">
