--- a/pages/questions.html
+++ b/pages/questions.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="displayQuestion()">
   <main>
-    <section class="section fade-in">
+    <section class="section">
         <div class="centered-box fade-in">
           <!--question text-->
           <h1 id="question">Test Question?</h1>
