--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Horror Personality Quiz</title>
+  <title>Monstrous Persona</title>
 </head>
 <body>
   <main>
@@ -12,7 +12,9 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <!--question text-->
-          <h1 style="margin:2%; top: 25%; font-size: 2.5rem;">HORROR PERSONALITY QUIZ</h1>
+          <h1 style="margin:2%; top: 22%; font-size: 2.4rem; font-weight: 700;
+          line-height: 2.2rem;">
+            MONSTROUS PERSONA</h1>
           <img src="images/forest/0.png" alt="Home Image">
           <div class="button-container">
             <button onclick = "start()">START</button>
