sprite positioning web responsive
code updates

--- a/pages/click for results.html
+++ b/pages/click for results.html
@@ -12,6 +12,7 @@
         <div class="centered-box fade-in">
           <!--<h1 id="header">In the reflection...</h1>-->
           <img id="image" src="../images/forest/mirror.png" alt="Background Image">
+          <div id="foreground sprite"></div> <!--prevent uncaught error-->
           <div class="button-container">
             <button id="result button" onclick="goReflection()">
               Is that me...?</button>
