--- a/pages/error.html
+++ b/pages/error.html
@@ -12,6 +12,7 @@
         <div class="centered-box fade-in">
           <h1>ERROR PAGE</h1>
           <img src="../images/forest/mirror.png" alt="Result Image">
+          <div id="foreground sprite" class="foreground-sprite" style="left: 25%; top:45%;"></div>
           <div class="button-container">
             <button onclick="restartQuiz()">RESTART QUIZ</button>
           </div>
