--- a/pages/reflection.html
+++ b/pages/reflection.html
@@ -11,6 +11,7 @@
     <section class="section">
         <div class="centered-box fade-in">
           <img id="image" src="../images/forest/0.png" alt="Image">
+          <div id="foreground sprite"></div> <!--prevent uncaught error-->
           <div class="button-container" style="height: 40%">
               <button id="go to result button" onclick="goResults()">
                 I'm...</button>
