credit page setup
started setting up cwedits uwu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <div class="button-container">
             <button onclick = "start()">START</button>
             <button onclick = "shareQuiz()">SHARE</button>
+            <a href="pages/credits.html">About Us</a>
           </div>
           <div id="snackbar">Copied link to clipboard</div>
         </div>
