--- a/pages/credits.html
+++ b/pages/credits.html
@@ -12,13 +12,13 @@
         <div class="centered-box fade-in">
           <h1>Cwedits uwu</h1>
           <!--Bella-->
-          <h1 style="top: 20%;">Bewwa</h1>
+          <h1 style="top: 20%;">Bewwa Youwu</h1>
 
           <!--Josh-->
-          <h1 style="top: 27%;">Jowosh</h1>
+          <h1 style="top: 27%;">Jowosh Howodiny</h1>
 
           <!--Martin-->
-          <h1 style="top: 34%;">Meowtin</h1>
+          <h1 style="top: 34%;">Meowtin Uwuy</h1>
 
           <img src="../images/forest/mirror.png" alt="Result Image">
           <div id="foreground sprite" class="foreground-sprite" style="left: 25%; top:50%;"></div>
