changes reflecting feedback
maxwell

--- a/pages/click for results.html
+++ b/pages/click for results.html
@@ -13,7 +13,7 @@
           <!--<h1 id="header">In the reflection...</h1>-->
           <img id="image" src="../images/forest/mirror.png" alt="Background Image">
           <div id="foreground sprite"></div> <!--prevent uncaught error-->
-          <div class="button-container">
+          <div class="button-container" style="height:50%;">
             <button id="result button" onclick="goReflection()">
               Is that me...?</button>
           </div>
