--- a/pages/credits.html
+++ b/pages/credits.html
@@ -18,7 +18,7 @@
           <!--Martin-->
           <h1 style="top: 34%;">Martin Uy</h1>
 
-          <img src="../images/forest/mirror.png" alt="Result Image">
+          <img src="../images/forest/12.png" alt="Result Image">
           <div id="foreground sprite" class="foreground-sprite" style="left: 25%; top:50%;"></div>
           <div class="button-container" style="height:25%">
             <button onclick="goRepo()">CREDITS</button>
