--- a/pages/error.html
+++ b/pages/error.html
@@ -11,7 +11,7 @@
     <section class="section">
         <div class="centered-box fade-in">
           <h1>ERROR PAGE</h1>
-          <img src="../images/forest/mirror.png" alt="Result Image">
+          <img src="../images/forest/12.png" alt="Result Image">
           <div id="foreground sprite" class="foreground-sprite" style="left: 25%; top:45%;"></div>
           <div class="button-container">
             <button onclick="restartQuiz()">RESTART QUIZ</button>
