--- a/pages/credits.html
+++ b/pages/credits.html
@@ -21,7 +21,7 @@
           <img src="../images/forest/12.png" alt="Result Image">
           <div id="foreground sprite" class="foreground-sprite" style="left: 25%; top:50%;"></div>
           <div class="button-container" style="height:25%">
-            <button onclick="goRepo()">CREDITS</button>
+            <button onclick="goRepo()">READ ME</button>
             <button onclick="restartQuiz()">HOME</button>
           </div>
         </div>
