--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <section class="section fade-in">
         <div class="centered-box fade-in">
           <!--question text-->
-          <h1 style="margin:2%; top: 22%; font-size: 2.4rem; font-weight: 700;
+          <h1 style="margin:2%; top: 25%; font-size: 2.4rem; font-weight: 700;
           line-height: 2.2rem;">
             MONSTROUS PERSONA</h1>
-          <img src="images/forest/0.png" alt="Home Image">
+          <img src="images/forest/11.png" alt="Home Image">
+          <div id="foreground sprite" class="foreground-sprite" style="left: 35%; top:47%;"></div>
           <div class="button-container">
             <button onclick = "start()">START</button>
             <button onclick = "shareQuiz()">SHARE</button>
