human sprite update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           line-height: 2.2rem;">
             MONSTROUS PERSONA</h1>
           <img src="images/forest/11.png" alt="Home Image">
-          <div id="foreground sprite" class="foreground-sprite" style="left: 35%; top:47%;"></div>
+          <div class="rabbit-sprite" style="left: 35%; top:47%;"></div>
           <div class="button-container">
             <button onclick = "start()">START</button>
             <button onclick = "shareQuiz()">SHARE</button>
