sprite positioning adjustments
test

--- a/pages/credits.html
+++ b/pages/credits.html
@@ -19,7 +19,7 @@
           <h1 style="top: 34%;">Martin Uy</h1>
 
           <img src="../images/forest/12.png" alt="Result Image">
-          <div class="rabbit-sprite" style="left: 30%; top:50%;"></div>
+          <div class="rabbit-sprite"></div>
           <div class="button-container" style="height:25%">
             <button onclick="goRepo()">READ ME</button>
             <button onclick="restartQuiz()">HOME</button>
