--- a/pages/error.html
+++ b/pages/error.html
@@ -12,7 +12,7 @@
         <div class="centered-box fade-in">
           <h1>ERROR PAGE</h1>
           <img src="../images/forest/12.png" alt="Result Image">
-          <div class="rabbit-sprite" style="left: 30%; top:45%;"></div>
+          <div class="rabbit-sprite"></div>
           <div class="button-container">
             <button onclick="restartQuiz()">RESTART QUIZ</button>
           </div>
